fixed navbar not stretching issue

--- a/react-website/src/components/Navigation/Navbar.css
+++ b/react-website/src/components/Navigation/Navbar.css
@@ -13,11 +13,8 @@ body {
 
 .navMenu {
   position: absolute;
-  top: 2%;
-  left: 15%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  padding-top: 1.5%;
+  left: 2%;
+  padding-top: .1%;
 }
 
 .navMenu a {
