--- a/react-website/src/pages/contact.css
+++ b/react-website/src/pages/contact.css
@@ -1,6 +1,9 @@
 h1 {
     font-size: 60px;
     text-align: left;
+    padding-top: 80px;
+    padding-bottom: 20px;
+    padding-left: 40px;
 }
 
 h2 {
