--- a/react-website/src/pages/index.css
+++ b/react-website/src/pages/index.css
@@ -23,7 +23,7 @@
   margin-left: auto;
   margin-right: auto;
   width: 60%;
-  padding-top: 25px;
+  padding-top: 20px;
   padding-bottom: 30px;
 }
 
